--- a/barelly/index.html
+++ b/barelly/index.html
@@ -24,7 +24,7 @@
  <li><a href="#">About BDA</a></li>
  <li ><a href="#">Schemes</a></li>
  <li class="gap"><a href="#" >Achievements</a></li>
- <li><a href="#">Contact us</a></li>
+ <li><a href="#">Contact</a></li>
  <li><a href="#">Information</a></li></ul>
 </div></div>  </div>
 <!--navigation-->
