--- a/barelly/index.html
+++ b/barelly/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<title>barelly</title>
+<title>barelly barelly barelly</title>
 	<link href="css/source.css" rel="stylesheet" type="text/css">
 
 </head>
